--- a/src/app/portfolio/home-page/home-page.component.html
+++ b/src/app/portfolio/home-page/home-page.component.html
@@ -16,6 +16,17 @@
   <div class="text-body">
     <div class="box-1">
       <p class="txt-title">Hi, my name is</p>
+
+
+
+      <div class="example-button-container" style="position: fixed;width: 80px;right: 20px;bottom: 30px;z-index: 10000;">
+        <div mat-fab aria-label="Example icon button with a home icon" class="whatsapp-button">
+          <a style="z-index: 10000;display: block;" href="https://api.whatsapp.com/message/ZC4XJD3S67RNA1?autoload=1&app_absent=0" target="_blank">
+            <img src="https://icon-library.com/images/whatsapp-icon-vector/whatsapp-icon-vector-7.jpg" alt="WhatsApp">
+          </a>
+        </div>
+      </div>
+
       <!--<button type="button" class="btn btn-primary" tooltip="Bazinga!">-->
         <!--Bazinga-->
       <!--</button>-->
@@ -30,7 +41,7 @@
 
     </div>
     <div class="box-4">
-      <button mat-button class=" btn-more" >Check out <span class="span-btn-txt">my details</span></button>
+      <button mat-button class=" btn-more" >Check out <span class="span-btn-txt">my details </span> </button>
     </div>
   </div>
   <div class="name-box">
@@ -38,6 +49,7 @@
       <span class="txt-mail " cursor-color="blue" tooltip="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">diyanethhasintha@gmail.com</span>
     </div>
     <div class="social-media">
+
       <img class="social-icon" src="../../../assets/images/icons/social/github.svg" alt="">
       <img class="social-icon" src="../../../assets/images/icons/social/instagram.svg" alt="">
       <img class="social-icon" src="../../../assets/images/icons/social/twitter.svg" alt="">
