--- a/src/app/portfolio/worked/epic/epic.component.html
+++ b/src/app/portfolio/worked/epic/epic.component.html
@@ -1,22 +1,25 @@
-<div class="box_position">
-  <p class="txt_position">Software Engineer Intern</p>
-</div>
-<div class="box_duration">
-  <p class="txt_duration">Aug 2021 - Aug 2022</p>
-
-</div>
-<div class="box_body">
-  <p class="txt_pdetails">I Successfully completed Year Software Engineer Internship at Epic. That Period Could i learn Fintech domain and experience with Angular and Spring boot and more about It Industry</p>
-</div>
 
 
-<div class="box_position">
+
+<div class="box_position" data-aos="zoom-in-up">
   <p class="txt_position">Associate Software Developer * </p>
 </div>
-<div class="box_duration">
+<div class="box_duration" data-aos="zoom-in-up">
   <p class="txt_duration">Aug 2022 - Present</p>
 
 </div>
-<div class="box_body">
+<div class="box_body" data-aos="zoom-in-up">
   <p class="txt_pdetails">Currently I work on Associate Software Developer at Epic Lanka.</p>
+  <p class="txt_pdetails">Spring Boot, Angular, Mysql, Mongodb, Microservice architecture, Jira, Git</p>
+</div>
+
+<div class="box_position" data-aos="zoom-in-up">
+  <p class="txt_position">Software Engineer Intern</p>
+</div>
+<div class="box_duration" data-aos="zoom-in-up">
+  <p class="txt_duration">Aug 2021 - Aug 2022</p>
+
+</div>
+<div class="box_body" data-aos="zoom-in-up">
+  <p class="txt_pdetails">I Successfully completed Year Software Engineer Internship at Epic. That Period Could i learn Fintech domain and experience with Angular and Spring boot and more about It Industry</p>
 </div>
