--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -10,7 +10,7 @@
       <!--<button type="button" mat-button class=" btn-route">-->
         <!--03. Shopping-->
       <!--</button>-->
-      <button type="button" mat-button class=" btn-resume" (click)="openResume()">
+      <button type="button" mat-button class=" btn-resume" (click)="downloadPDF()">
         Resume
       </button>
 
@@ -48,7 +48,7 @@
     <button type="button" mat-button class="btn-route" >
       <!--01. Home-->
     </button>
-    <button type="button" mat-button class=" btn-resume"  (click)="openResume()">
+    <button type="button" mat-button class=" btn-resume"  (click)="downloadPDF()">
       Resume
     </button>
 
