--- a/src/app/portfolio/about/about.component.html
+++ b/src/app/portfolio/about/about.component.html
@@ -9,37 +9,37 @@
       <div class="flex_2">
 
         <div class="div_description">
-          <h1 class="txt_des">Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in <span class="txt_hightlight">web development </span>started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!</h1>
-            <h1 class="txt_des">Fast-forward to today, and I’ve had the privilege of working at <span class="txt_hightlight"> an advertising agency, a start-up, a huge corporation, and a student-led design studio.</span> My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.</h1>
+          <h1 class="txt_des" data-aos="zoom-in-up">Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in <span class="txt_hightlight">web development </span>started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!</h1>
+            <h1 class="txt_des" data-aos="zoom-in-up">Fast-forward to today, and I’ve had the privilege of working at <span class="txt_hightlight"> an advertising agency, a start-up, a huge corporation, and a student-led design studio.</span> My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.</h1>
         </div>
         <div class="div_language">
-          <p class="txt_language">Here are a few technologies I’ve been working with recently:</p>
+          <p class="txt_language" data-aos="zoom-in-up">Here are a few technologies I’ve been working with recently:</p>
           <div class="language">
             <div class="language_box">
-              <div class="div_language">
+              <div class="div_language" data-aos="zoom-in-up">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
                 <p class="txt_lan">JavaScript (ES6+)</p>
               </div>
-              <div class="div_language">
+              <div class="div_language" data-aos="zoom-in-up">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
                 <p class="txt_lan">react</p>
               </div>
-              <div class="div_language">
+              <div class="div_language" data-aos="zoom-in-up">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
                 <p class="txt_lan">Angular</p>
               </div>
 
             </div>
-            <div class="language_box">
+            <div class="language_box" data-aos="zoom-in-up">
               <div class="div_language">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
                 <p class="txt_lan">TypeScript</p>
               </div>
-              <div class="div_language">
+              <div class="div_language" data-aos="zoom-in-up">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
                 <p class="txt_lan">Eleventy</p>
               </div>
-              <div class="div_language">
+              <div class="div_language" data-aos="zoom-in-up">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
                 <p class="txt_lan">WordPress</p>
               </div>
@@ -51,7 +51,7 @@
     </div>
     <div class="side_2">
       <div class="flex_img">
-        <img class="img_hasintha" src="../../../assets/images/img/hasintha.jpg" alt="">
+        <img data-aos="zoom-in-up" class="img_hasintha" src="../../../assets/images/img/20230318_093000.jpg" alt="">
       </div>
     </div>
 
