--- a/src/app/portfolio/home-page/home-page.component.scss
+++ b/src/app/portfolio/home-page/home-page.component.scss
@@ -318,3 +318,47 @@
   z-index:100;
   color:green
 }
+
+.whatsapp-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 10px;
+  width: 60px;
+  height: 60px;
+  background-color: #0A192F;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 1px solid white;
+  outline: none;
+}
+
+.whatsapp-button:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+}
+
+.whatsapp-button::before {
+  content: '';
+  position: absolute;
+  //top: 15px;
+  //right: 15px;
+  width: 100px;
+  height: 100px;
+  background: linear-gradient(45deg, #0A192F, #128c7e);
+  border-radius: 50%;
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.9);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.3);
+    opacity: 0;
+  }
+}
